puree-tests/src/test/resources/neg/UnusedList.scala
object UnusedOption {
  def f(): Int = {
    List(1)
    1
  }
}
